[gd_scene load_steps=18 format=3 uid="uid://bv1fwc6ww2ake"]

[ext_resource type="Script" path="res://scenes/ui/meta_upgrade_card.gd" id="1_eh2yt"]
[ext_resource type="PackedScene" uid="uid://b4kxigpsu4gab" path="res://scenes/component/random_stream_player_component.tscn" id="2_8vyyx"]
[ext_resource type="AudioStream" uid="uid://cyrrx5nxd740n" path="res://assets/audio/switch1.ogg" id="3_ypiki"]
[ext_resource type="AudioStream" uid="uid://bl6wuw657spmg" path="res://assets/audio/switch2.ogg" id="4_5vgt3"]
[ext_resource type="AudioStream" uid="uid://dtvh02c4tv6ps" path="res://assets/audio/switch3.ogg" id="5_omcn5"]
[ext_resource type="AudioStream" uid="uid://bx6ht6etsnrt" path="res://assets/audio/switch4.ogg" id="6_8x6np"]
[ext_resource type="AudioStream" uid="uid://bxnpl3j6hvmic" path="res://assets/audio/switch5.ogg" id="7_vdfqr"]
[ext_resource type="AudioStream" uid="uid://dr8vvqkyawmpv" path="res://assets/audio/switch6.ogg" id="8_f0f5v"]
[ext_resource type="AudioStream" uid="uid://d0ldfp7clkvpy" path="res://assets/audio/switch7.ogg" id="9_bfn1b"]
[ext_resource type="AudioStream" uid="uid://cdp0k7mythd42" path="res://assets/audio/switch8.ogg" id="10_qokpp"]
[ext_resource type="AudioStream" uid="uid://bg7v52ngrfn2e" path="res://assets/audio/switch9.ogg" id="11_075d5"]
[ext_resource type="AudioStream" uid="uid://5ryjrlljq3lb" path="res://assets/audio/switch10.ogg" id="12_8r0ch"]
[ext_resource type="Texture2D" uid="uid://cd50dgkmm7x1k" path="res://scenes/game_object/experiance_vial/experiance_vial.png" id="13_tjurs"]

[sub_resource type="Animation" id="Animation_y2gyi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_waxhg"]
resource_name = "selected"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.4),
"transitions": PackedFloat32Array(1, 2.21914, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.0872665, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ClickSoundPlayerComponent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_random"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_583fc"]
_data = {
"RESET": SubResource("Animation_y2gyi"),
"selected": SubResource("Animation_waxhg")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7segh"]
content_margin_left = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.458824, 0.890196, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0)

[node name="MetaUpgradeCard" type="PanelContainer" groups=["meta_upgrade_card"]]
custom_minimum_size = Vector2(170, 0)
offset_right = 150.0
offset_bottom = 150.0
pivot_offset = Vector2(75, 75)
script = ExtResource("1_eh2yt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_583fc")
}

[node name="ClickSoundPlayerComponent" parent="." instance=ExtResource("2_8vyyx")]
volume_db = -3.0
streams = Array[AudioStream]([ExtResource("3_ypiki"), ExtResource("4_5vgt3"), ExtResource("5_omcn5"), ExtResource("6_8x6np"), ExtResource("7_vdfqr"), ExtResource("8_f0f5v"), ExtResource("9_bfn1b"), ExtResource("10_qokpp"), ExtResource("11_075d5"), ExtResource("12_8r0ch")])

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 12

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"AlternatePanelContainer"

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
theme_override_font_sizes/font_size = 32
text = "Testies"
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 2

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"BlueOutlineLabel"
theme_override_colors/font_shadow_color = Color(0.14902, 0.168627, 0.266667, 1)
text = "here is a description"
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ProgressLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_type_variation = &"BlueOutlineLabel"
text = "50/200"

[node name="CountLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"BlueOutlineLabel"
text = "x0"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_7segh")
max_value = 1.0
show_percentage = false

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/Control"]
layout_mode = 2
offset_left = -8.0
offset_top = -5.0
offset_right = 8.0
offset_bottom = 11.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("13_tjurs")

[node name="PurchaseButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Purchase"
